--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "uuid": "^10.0.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
